[project]
name = "maven-unittest-statistics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "javalang>=0.13.0",
    "matplotlib>=3.10.8",
    "openai>=2.0.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tqdm>=4.67.3",
]
